--- a/Night Owl/Base.lproj/Main.storyboard
+++ b/Night Owl/Base.lproj/Main.storyboard
@@ -370,7 +370,7 @@
             </objects>
             <point key="canvasLocation" x="1292" y="1049"/>
         </scene>
-        <!--Title-->
+        <!--loading...-->
         <scene sceneID="wXn-z7-guF">
             <objects>
                 <viewController id="bXz-2P-jrF" customClass="WebController" customModule="Night_Owl" customModuleProvider="target" sceneMemberID="viewController">
@@ -382,7 +382,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bkc-3G-l41">
+                            <webView contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bkc-3G-l41">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
@@ -395,7 +395,7 @@
                             <constraint firstItem="Bkc-3G-l41" firstAttribute="top" secondItem="INm-7V-XH6" secondAttribute="bottom" id="tw0-Zd-udJ"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="P2v-Kb-iYu"/>
+                    <navigationItem key="navigationItem" title="loading..." id="P2v-Kb-iYu"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="webView" destination="Bkc-3G-l41" id="455-5G-Rls"/>
