--- a/Night Owl/Base.lproj/Main.storyboard
+++ b/Night Owl/Base.lproj/Main.storyboard
@@ -91,7 +91,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Question" id="FVo-66-bL3"/>
+                    <navigationItem key="navigationItem" title="Question" id="FVo-66-bL3">
+                        <barButtonItem key="rightBarButtonItem" image="Flag" id="gr1-UD-s7x">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="flagAnswer:" destination="kbr-vP-UGO" id="Ghr-xo-6hf"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qRM-yE-bdg" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -284,7 +291,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HxY-60-E4k" id="QUl-g9-i0N">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Trial Questions" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZS5-fJ-X3X">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Free Questions" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZS5-fJ-X3X">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -487,6 +494,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Flag" width="360" height="360"/>
         <image name="Questions" width="60" height="60"/>
         <image name="Settings" width="60" height="60"/>
     </resources>
